Remove strengths and weaknesses columns from chart properties table and update related rendering logic

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                             <th class="py-3 px-4">Dimensionality</th>
                             <th class="py-3 px-4">Grouping Support</th>
                             <th class="py-3 px-4">Typical Use Cases</th>
-                            <th class="py-3 px-4">Strengths</th>
-                            <th class="py-3 px-4">Weaknesses</th>
+                            <!-- <th class="py-3 px-4">Strengths</th>
+                            <th class="py-3 px-4">Weaknesses</th> -->
                             <th class="py-3 px-4">Data Structure Constraints</th>
                             <th class="py-3 px-4">Required Data Structure</th>
                         </tr>
